==> NicolaGiardino/OSES_Project/applications/BMP280.c <==
#include "bmp280.h"
#define BMP280_REG_CALIB00              ((uint8_t)0x88) // Calibration data calib00
#define BMP280_REG_CALIB25              ((uint8_t)0xA1) // Calibration data calib25
#define BMP280_REG_ID                   ((uint8_t)0xD0) // Chip ID
#define BMP280_REG_RESET                ((uint8_t)0xE0) // Software reset control register
#define BMP280_REG_STATUS               ((uint8_t)0xF3) // Device status register
#define BMP280_REG_CTRL_MEAS            ((uint8_t)0xF4) // Pressure and temperature measure control register
#define BMP280_REG_CONFIG               ((uint8_t)0xF5) // Configuration register
#define BMP280_REG_PRESS_MSB            ((uint8_t)0xF7) // Pressure readings MSB
#define BMP280_REG_PRESS_LSB            ((uint8_t)0xF8) // Pressure readings LSB
#define BMP280_REG_PRESS_XLSB           ((uint8_t)0xF9) // Pressure readings XLSB
#define BMP280_REG_TEMP_MSB             ((uint8_t)0xFA) // Temperature data MSB
#define BMP280_REG_TEMP_LSB             ((uint8_t)0xFB) // Temperature data LSB
#define BMP280_REG_TEMP_XLSB            ((uint8_t)0xFC) // Temperature data XLSB
#define BMP280_STATUS_MSK               ((uint8_t)0x09) // unused bits in 'status'
#define BMP280_OSRS_T_MSK               ((uint8_t)0xE0) // 'osrs_t' in 'control'
#define BMP280_OSRS_P_MSK               ((uint8_t)0x1C) // 'osrs_p' in 'control'
#define BMP280_MODE_MSK                 ((uint8_t)0x03) // 'mode' in 'control'

static void __reg_write(rt_uint8_t reg, rt_uint8_t value) {
    rt_uint8_t buf[2] = { reg, value };

    struct rt_i2c_msg msgs;
    msgs.buf = buf;
    msgs.addr = BMP280_ADDR;
    msgs.len = sizeof(buf);
    msgs.flags = RT_I2C_WR;

    if (rt_i2c_transfer(i2c_device, &msgs, 1) != 1)
    {
        rt_kprintf("write fail!");
    }
}

static rt_uint8_t __reg_read(rt_uint8_t reg) {
    rt_uint8_t value = 0;
    rt_uint8_t addr = reg;
    struct rt_i2c_msg msgs[2];

    msgs[0].buf = &addr;
    msgs[0].addr = BMP280_ADDR;
    msgs[0].len = 1;
    msgs[0].flags = RT_I2C_WR;

    msgs[1].buf = &value;
    msgs[1].addr = BMP280_ADDR;
    msgs[1].len = 1;
    msgs[1].flags = RT_I2C_RD;

    if (rt_i2c_transfer(i2c_device, msgs, 2) != 2)
    {
        rt_kprintf("write fail!\n");
    }
    /*if (rt_i2c_transfer(i2c_device, &msgs[1], 1) != 1)
    {
        rt_kprintf("read fail!\n");
    }*/

    return value;
}

static BMP280_RESULT __reg_read_bulk(rt_uint8_t reg, rt_uint8_t *buf, rt_uint8_t count) {

    struct rt_i2c_msg msgs[2];
    rt_uint8_t addr = reg;

    msgs[0].buf = &addr;
    msgs[0].addr = BMP280_ADDR;
    msgs[0].len = 1;
    msgs[0].flags = RT_I2C_WR;

    msgs[1].buf = buf;
    msgs[1].addr = BMP280_ADDR;
    msgs[1].len = count;
    msgs[1].flags = RT_I2C_RD;

    if (rt_i2c_transfer(i2c_device, msgs, 2) != 2)
    {
        rt_kprintf("write/read fail!");
        return BMP280_ERROR;
    }

    return BMP280_SUCCESS;

}
