==> rohanbhatia36/STM32-RTOS-Environmental-Hub/Core/Src/bmp280.c <==
#include "bmp280.h"
#include "main.h"
#define BMP280_REG_CALIB00              ((uint8_t)0x88) // Calibration data calib00
#define BMP280_REG_CALIB25              ((uint8_t)0xA1) // Calibration data calib25
#define BMP280_REG_ID                   ((uint8_t)0xD0) // Chip ID
#define BMP280_REG_RESET                ((uint8_t)0xE0) // Software reset control register
#define BMP280_REG_STATUS               ((uint8_t)0xF3) // Device status register
#define BMP280_REG_CTRL_MEAS            ((uint8_t)0xF4) // Pressure and temperature measure control register
#define BMP280_REG_CONFIG               ((uint8_t)0xF5) // Configuration register
#define BMP280_REG_PRESS_MSB            ((uint8_t)0xF7) // Pressure readings MSB
#define BMP280_REG_PRESS_LSB            ((uint8_t)0xF8) // Pressure readings LSB
#define BMP280_REG_PRESS_XLSB           ((uint8_t)0xF9) // Pressure readings XLSB
#define BMP280_REG_TEMP_MSB             ((uint8_t)0xFA) // Temperature data MSB
#define BMP280_REG_TEMP_LSB             ((uint8_t)0xFB) // Temperature data LSB
#define BMP280_REG_TEMP_XLSB            ((uint8_t)0xFC) // Temperature data XLSB
#define BMP280_STATUS_MSK               ((uint8_t)0x09) // unused bits in 'status'
#define BMP280_OSRS_T_MSK               ((uint8_t)0xE0) // 'osrs_t' in 'control'
#define BMP280_OSRS_P_MSK               ((uint8_t)0x1C) // 'osrs_p' in 'control'
#define BMP280_MODE_MSK                 ((uint8_t)0x03) // 'mode' in 'control'

static void __reg_write(uint8_t reg, uint8_t value) {
	uint8_t buf[2] = { reg, value };

	HAL_I2C_Master_Transmit(BMP280_I2C_PORT, BMP280_ADDR, buf, 2, HAL_MAX_DELAY);

}

static uint8_t __reg_read(uint8_t reg) {
	uint8_t value = 0;

	HAL_I2C_Master_Transmit(BMP280_I2C_PORT, BMP280_ADDR, &reg, 1, HAL_MAX_DELAY);
	HAL_I2C_Master_Receive(BMP280_I2C_PORT, BMP280_ADDR, &value, 1, HAL_MAX_DELAY);;

	return value;
}

static BMP280_RESULT __reg_read_bulk(uint8_t reg, uint8_t *buf, uint32_t count) {
	if (HAL_I2C_Master_Transmit(BMP280_I2C_PORT, BMP280_ADDR, &reg, 1, HAL_MAX_DELAY) == HAL_OK) {
		if (HAL_I2C_Master_Receive(BMP280_I2C_PORT, BMP280_ADDR, buf, count, HAL_MAX_DELAY) == HAL_OK) {
			return BMP280_SUCCESS;
		}
	}

	return BMP280_ERROR;
}
